--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Calculator"
         tools:targetApi="31">
         <activity
+            android:name=".TaxaMetabolicaBasal"
+            android:exported="false"
+            android:theme="@style/Theme.Calculator" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
